# ax-test-expenses

./: .gitignore  CLAUDE.md  TEST_GUIDE.md  pyproject.toml
.claude/ax/: config.json
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
api/: index.py
app/: __init__.py  dashboard.py  models.py  routes.py
tests/: conftest.py
tests/integration/: test_budget_api.py  test_dashboard.py  test_expense_api.py
tests/scenarios/: test_budget_workflow.py  test_dashboard_workflow.py  test_expense_workflow.py
tests/unit/: test_budgets.py  test_models.py  test_recurring.py  test_summaries.py
