[project]
name = "ax-test-expenses"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
    "scenario: end-to-end scenario tests",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"app/dashboard.py" = ["E501"]
